More on awareness

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ A person’s essential being that distinguishes them from others, especially con
 
 <h3 id="lack-of-awareness-is-the-only-real-weakness">Lack of awareness is the only real weakness.</h3>
 
-<p>The only objective weakness is ignorance or the lack of awareness. Being blind to your purpose jails your mind and body; self-awareness frees them. Let mind and body play out their desires, insecurities and weaknesses, and fester in the trivialities of daily life, while you filter all your emotions down to your Self - compressing it, setting its survival gears into motion, letting it mould and chisel you.</p>
+<p>The only objective weakness is ignorance or the lack of awareness. Being blind to your purpose jails your mind and body; self-awareness frees them. Let mind and body play out their desires, insecurities and weaknesses, and fester in the trivialities of daily life, while you filter all your emotions down to your Self - compressing it, setting its survival gears into motion, letting it mould and chisel you. This way, instead of curbing your mind, you get to satiate its desires, while simply having the awareness and ability to reset back to your Self and let it re-establish your purpose at any time.</p>
 
 <p>All your problems are tangible stuff from external life that simply can’t get through to your inner reality, and if you trust your Self with the emotions that you experience, your Self will work in tandem with your mind and body to fix them for you.</p>
 
