--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ A person’s essential being that distinguishes them from others, especially con
 
 <p>The Self builds purpose from the real world, and never seeks things that do not synergize with that purpose. Say, I seek better footballing skills. Footballers inspire me, golfers don’t. Tiger Woods might inspire me with his success and excellence but never with his golf, because golf is simply not part of my purpose. Though I only play football recreationally, my Self has built it into my identity as a very small part, and that contributes to my purpose.</p>
 
-<p>Like I mentioned, the Self can only restore peace by fulfilling a purpose, but the mind does not need to do this, it can go back to peace through meaningless gratification. My Self never seeks alcohol, my mind does. Happiness in the mind does not equate to peace in the Self. When we can dig through to the Self and let it work on getting its peace back, that is when we have true peace - peace through restoration of identity. That’s us letting the Self work on its survival instincts - putting our identity, the <em>I</em>, back in place.</p>
+<p>Like I mentioned, the Self can only restore peace by fulfilling a purpose, but the mind does not need to do this, it can go back to peace through meaningless gratification. My Self never seeks alcohol to dunk my problems in, my mind does. Happiness in the mind does not equate to peace in the Self. When we can dig through to the Self and let it work on getting its peace back, that is when we have true peace - peace through restoration of identity. That’s us letting the Self work on its survival instincts - putting our identity, the <em>I</em>, back in place.</p>
 
 <hr>
 
@@ -134,7 +134,7 @@ A person’s essential being that distinguishes them from others, especially con
 
 <h3 id="that-youre-alone-is-the-most-liberating-thought">That you’re alone is the most liberating thought.</h3>
 
-<p>The Self is alone, it doesn’t need friends. It doesn’t have needs. Your reality is just you, there is no one else. The mind, in the real world, has needs.</p>
+<p>The Self is alone, it doesn’t need others. It doesn’t have needs. Your reality is just you, there is no one else. The mind, in the real world, has needs.</p>
 
 <p>Emotions put you in touch with your Self because they compress your coil spring. And this makes you feel alone. Your Self is aware of this; it’s already a master of being alone and in harmony with itself. But your mind has a hard time dealing with that, so it goes off to fix the ominous feeling by indulging in real world banalities and burying the emotions within.</p>
 
@@ -185,7 +185,7 @@ A person’s essential being that distinguishes them from others, especially con
 
 <h3 id="lack-of-awareness-is-the-only-real-weakness">Lack of awareness is the only real weakness.</h3>
 
-<p>The only objective weakness is ignorance or the lack of awareness. Being blind to your purpose jails your mind and body; self-awareness frees them. Let mind and body play out their desires, insecurities and weaknesses, and fester in the trivialities of daily life, while you filter all your emotions down to your Self - compressing it, setting its survival gears into motion, letting it mould and chisel you. This way, instead of curbing your mind, you get to satiate its desires, while simply having the awareness and ability to reset back to your Self and let it re-establish your purpose at any time.</p>
+<p>The only objective weakness is ignorance or the lack of awareness. Being blind to your purpose jails your mind and body; self-awareness frees them. Let mind and body play out their desires, insecurities, strengths and weaknesses, and absorb everything from the real world unimpeded, while you filter all your emotions down to your Self - compressing it, setting its survival gears into motion, letting it mould and chisel you. This way, instead of curbing your mind, you get to satiate its desires, while simply having the awareness and ability to reset back to your Self and let it re-establish your purpose at any time.</p>
 
 <p>All your problems are tangible stuff from external life that simply can’t get through to your inner reality, and if you trust your Self with the emotions that you experience, your Self will work in tandem with your mind and body to fix them for you.</p>
 
